# hack_ideatech_2023

./: .gitignore  APIdoc.txt  Cargo.toml  README.md  request_test.http  test.http  test.md  test.pu
db/: 000_init.sql  role_history.db
db/query/: -- table_create.sql  delete_table.sql  insert.sql  test.sql
src/: database.rs  main.rs  porker.rs
src/porker/: test.rs
