[package]
name = "hack_ideatech"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3

[dependencies]
actix-web = "4.3.0"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
rand = "*"
rustc-hash = "*"
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "migrate",
] }
tokio = { version = "1.26.0", features = ["full"] }
num = "0.4.0"
num-traits = "0.2.15"
num-derive = "0.3.3"
